[gd_scene load_steps=29 format=2]

[ext_resource path="res://systems/CharacterSystem/WalkUp/IdleUp .png" type="Texture" id=1]
[ext_resource path="res://systems/CharacterSystem/WalkUp/WalkUp 01.png" type="Texture" id=3]
[ext_resource path="res://systems/CharacterSystem/WalkLeft/WalkLeft 02.png" type="Texture" id=4]
[ext_resource path="res://systems/CharacterSystem/WalkDown/WalkDown 01.png" type="Texture" id=5]
[ext_resource path="res://systems/CharacterSystem/WalkRight/WalkRight 01.png" type="Texture" id=6]
[ext_resource path="res://systems/CharacterSystem/WalkLeft/WalkLeft 01.png" type="Texture" id=7]
[ext_resource path="res://systems/CharacterSystem/WalkDown/IdleDown.png" type="Texture" id=8]
[ext_resource path="res://systems/CharacterSystem/WalkLeft/IdleLeft.png" type="Texture" id=9]
[ext_resource path="res://systems/CharacterSystem/WalkRight/IdleRight.png" type="Texture" id=10]
[ext_resource path="res://systems/CharacterSystem/WalkDown/WalkDown 02.png" type="Texture" id=11]
[ext_resource path="res://systems/CharacterSystem/WalkUp/WalkUp 02.png" type="Texture" id=12]
[ext_resource path="res://systems/CharacterSystem/Player.gd" type="Script" id=13]
[ext_resource path="res://systems/CharacterSystem/PlayerStateMachine.tres" type="AnimationNodeStateMachine" id=14]

[sub_resource type="Animation" id=5]
resource_name = "IdleDown"
length = 0.1
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "RunDown"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "RunLeft"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "RunRight"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "RunUp"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "WalkRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "WalkUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.99999
height = 4.0

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 157, 38 )
collision_layer = 2
collision_mask = 41
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 5 )
anims/IdleLeft = SubResource( 6 )
anims/IdleRight = SubResource( 7 )
anims/IdleUp = SubResource( 8 )
anims/RunDown = SubResource( 16 )
anims/RunLeft = SubResource( 15 )
anims/RunRight = SubResource( 17 )
anims/RunUp = SubResource( 18 )
anims/WalkDown = SubResource( 9 )
anims/WalkLeft = SubResource( 10 )
anims/WalkRight = SubResource( 11 )
anims/WalkUp = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( 0, -7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 1, 17 )
cast_to = Vector2( 0, 2.916 )

[node name="InteractionSystem" type="Area2D" parent="RayCast2D"]
position = Vector2( -1, 3 )
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/InteractionSystem"]
position = Vector2( 1, 4 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 17 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 18.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="LookAt" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="timeout" from="LookAt" to="." method="_on_LookAt_timeout"]
